Update: fixes #11 - contact modal on Safari

--- a/custom/themes/ecoman/src/sass/components/_forms.scss
+++ b/custom/themes/ecoman/src/sass/components/_forms.scss
@@ -136,7 +136,7 @@
 	.name-email-container,
 	.message-container {
 		position: relative;
-		// 
+		//
 		@include media($bp-med) {
 			@include display(flex);
 			@include align-items(flex-start);
@@ -144,7 +144,14 @@
 			@include flex-direction(column);
 		}
 	}
+	.name-email-container {
+		display:block;
+	}
+	.message-container {
+		display: block;
+	}
 }
+
 
 .comment-form-comment {
 	textarea {
